cs160/proj3backup/proj3/parser.output
Terminals unused in grammar

   FOR


Grammar

    0 $accept: Program $end

    1 Program: functions

    2 functions: functions function
    3          | /* empty */

    4 type: BOOLEAN
    5     | INTEGER

    6 params: params_
    7       | /* empty */

    8 params_: params_ SEMICOLON param
    9        | param

   10 param: var_list COLON type

   11 var_list: var_list COMMA IDENTIFIER
   12         | IDENTIFIER

   13 moreparams: moreparams COMMA IDENTIFIER
   14           | /* empty */

   15 function: FUNCTION IDENTIFIER PARENOPEN params PARENCLOSE COLON type CURLYOPEN body_of_function CURLYCLOSE

   16 body_of_function: var_declaration function_declaration statements ReturnStatement

   17 ReturnStatement: RETURN expression SEMICOLON

   18 var_declaration: /* empty */
   19                | var_declaration VAR IDENTIFIER moreparams COLON type SEMICOLON
   20                | var_declaration VAR IDENTIFIER moreparams COLON INTARRAY SQUAREOPEN NUMBER SQUARECLOSE SEMICOLON

   21 function_declaration: /* empty */
   22                     | function function_declaration

   23 statements: statements statement
   24           | /* empty */

   25 statement: IDENTIFIER SET IDENTIFIER PARENOPEN exprlist PARENCLOSE SEMICOLON
   26          | IDENTIFIER SQUAREOPEN expression SQUARECLOSE SET IDENTIFIER PARENOPEN exprlist PARENCLOSE SEMICOLON
   27          | IF PARENOPEN expression PARENCLOSE CURLYOPEN statements CURLYCLOSE
   28          | IF PARENOPEN expression PARENCLOSE CURLYOPEN statements CURLYCLOSE ELSE CURLYOPEN statements CURLYCLOSE
   29          | WHILE PARENOPEN expression PARENCLOSE CURLYOPEN statements CURLYCLOSE
   30          | IDENTIFIER SET expression SEMICOLON
   31          | IDENTIFIER SQUAREOPEN expression SQUARECLOSE SET expression SEMICOLON

   32 expression: or
   33           | expression OR or

   34 or: and
   35   | or AND and

   36 and: comparator
   37    | and EQUAL comparator
   38    | and NOTEQUAL comparator

   39 comparator: difference
   40           | comparator LT difference
   41           | comparator LTE difference
   42           | comparator GT difference
   43           | comparator GTE difference

   44 difference: add
   45           | difference PLUS add
   46           | difference MINUS add

   47 add: times
   48    | add DIVIDE times
   49    | add TIMES times

   50 times: unary

   51 unary: factor
   52      | NOT unary
   53      | MINUS unary

   54 factor: NUMBER
   55       | TRUE
   56       | FALSE
   57       | IDENTIFIER
   58       | PARENOPEN expression PARENCLOSE
   59       | ABS expression ABS
   60       | IDENTIFIER SQUAREOPEN expression SQUARECLOSE

   61 exprlist: /* empty */
   62         | expression moreexprlist

   63 moreexprlist: /* empty */
   64             | moreexprlist COMMA expression


Terminals, with rules where they appear

$end (0) 0
error (256)
BOOLEAN (258) 4
ELSE (259) 28
IF (260) 27 28
WHILE (261) 29
INTEGER (262) 5
FOR (263)
VAR (264) 19 20
FUNCTION (265) 15
INTARRAY (266) 20
RETURN (267) 17
AND (268) 35
DIVIDE (269) 48
EQUAL (270) 37
SET (271) 25 26 30 31
GTE (272) 43
GT (273) 42
LTE (274) 41
LT (275) 40
MINUS (276) 46 53
NOTEQUAL (277) 38
NOT (278) 52
OR (279) 33
PLUS (280) 45
TIMES (281) 49
TRUE (282) 55
FALSE (283) 56
NUMBER (284) 20 54
SEMICOLON (285) 8 17 19 20 25 26 30 31
COMMA (286) 11 13 64
COLON (287) 10 15 19 20
ABS (288) 59
CURLYOPEN (289) 15 27 28 29
CURLYCLOSE (290) 15 27 28 29
SQUAREOPEN (291) 20 26 31 60
SQUARECLOSE (292) 20 26 31 60
PARENOPEN (293) 15 25 26 27 28 29 58
PARENCLOSE (294) 15 25 26 27 28 29 58
IDENTIFIER (295) 11 12 13 15 19 20 25 26 30 31 57 60


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
Program (42)
    on left: 1, on right: 0
functions (43)
    on left: 2 3, on right: 1 2
type (44)
    on left: 4 5, on right: 10 15 19
params (45)
    on left: 6 7, on right: 15
params_ (46)
    on left: 8 9, on right: 6 8
param (47)
    on left: 10, on right: 8 9
var_list (48)
    on left: 11 12, on right: 10 11
moreparams (49)
    on left: 13 14, on right: 13 19 20
function (50)
    on left: 15, on right: 2 22
body_of_function (51)
    on left: 16, on right: 15
ReturnStatement (52)
    on left: 17, on right: 16
var_declaration (53)
    on left: 18 19 20, on right: 16 19 20
function_declaration (54)
    on left: 21 22, on right: 16 22
statements (55)
    on left: 23 24, on right: 16 23 27 28 29
statement (56)
    on left: 25 26 27 28 29 30 31, on right: 23
expression (57)
    on left: 32 33, on right: 17 26 27 28 29 30 31 33 58 59 60 62 64
or (58)
    on left: 34 35, on right: 32 33 35
and (59)
    on left: 36 37 38, on right: 34 35 37 38
comparator (60)
    on left: 39 40 41 42 43, on right: 36 37 38 40 41 42 43
difference (61)
    on left: 44 45 46, on right: 39 40 41 42 43 45 46
add (62)
    on left: 47 48 49, on right: 44 45 46 48 49
times (63)
    on left: 50, on right: 47 48 49
unary (64)
    on left: 51 52 53, on right: 50 52 53
factor (65)
    on left: 54 55 56 57 58 59 60, on right: 51
exprlist (66)
    on left: 61 62, on right: 25 26
moreexprlist (67)
    on left: 63 64, on right: 62 64


state 0

    0 $accept: . Program $end

    $default  reduce using rule 3 (functions)

    Program    go to state 1
    functions  go to state 2


state 1

    0 $accept: Program . $end

    $end  shift, and go to state 3


state 2

    1 Program: functions .
    2 functions: functions . function

    FUNCTION  shift, and go to state 4

    $default  reduce using rule 1 (Program)

    function  go to state 5


state 3

    0 $accept: Program $end .

    $default  accept


state 4

   15 function: FUNCTION . IDENTIFIER PARENOPEN params PARENCLOSE COLON type CURLYOPEN body_of_function CURLYCLOSE

    IDENTIFIER  shift, and go to state 6


state 5

    2 functions: functions function .

    $default  reduce using rule 2 (functions)


state 6

   15 function: FUNCTION IDENTIFIER . PARENOPEN params PARENCLOSE COLON type CURLYOPEN body_of_function CURLYCLOSE

    PARENOPEN  shift, and go to state 7


state 7

   15 function: FUNCTION IDENTIFIER PARENOPEN . params PARENCLOSE COLON type CURLYOPEN body_of_function CURLYCLOSE

    IDENTIFIER  shift, and go to state 8

    $default  reduce using rule 7 (params)

    params    go to state 9
    params_   go to state 10
    param     go to state 11
    var_list  go to state 12


state 8

   12 var_list: IDENTIFIER .

    $default  reduce using rule 12 (var_list)


state 9

   15 function: FUNCTION IDENTIFIER PARENOPEN params . PARENCLOSE COLON type CURLYOPEN body_of_function CURLYCLOSE

    PARENCLOSE  shift, and go to state 13


state 10

    6 params: params_ .
    8 params_: params_ . SEMICOLON param

    SEMICOLON  shift, and go to state 14

    $default  reduce using rule 6 (params)


state 11

    9 params_: param .

    $default  reduce using rule 9 (params_)


state 12

   10 param: var_list . COLON type
   11 var_list: var_list . COMMA IDENTIFIER

    COMMA  shift, and go to state 15
    COLON  shift, and go to state 16


state 13

   15 function: FUNCTION IDENTIFIER PARENOPEN params PARENCLOSE . COLON type CURLYOPEN body_of_function CURLYCLOSE

    COLON  shift, and go to state 17


state 14

    8 params_: params_ SEMICOLON . param

    IDENTIFIER  shift, and go to state 8

    param     go to state 18
    var_list  go to state 12


state 15

   11 var_list: var_list COMMA . IDENTIFIER

    IDENTIFIER  shift, and go to state 19


state 16

   10 param: var_list COLON . type

    BOOLEAN  shift, and go to state 20
    INTEGER  shift, and go to state 21

    type  go to state 22


state 17

   15 function: FUNCTION IDENTIFIER PARENOPEN params PARENCLOSE COLON . type CURLYOPEN body_of_function CURLYCLOSE

    BOOLEAN  shift, and go to state 20
    INTEGER  shift, and go to state 21

    type  go to state 23


state 18

    8 params_: params_ SEMICOLON param .

    $default  reduce using rule 8 (params_)


state 19

   11 var_list: var_list COMMA IDENTIFIER .

    $default  reduce using rule 11 (var_list)


state 20

    4 type: BOOLEAN .

    $default  reduce using rule 4 (type)


state 21

    5 type: INTEGER .

    $default  reduce using rule 5 (type)


state 22

   10 param: var_list COLON type .

    $default  reduce using rule 10 (param)


state 23

   15 function: FUNCTION IDENTIFIER PARENOPEN params PARENCLOSE COLON type . CURLYOPEN body_of_function CURLYCLOSE

    CURLYOPEN  shift, and go to state 24


state 24

   15 function: FUNCTION IDENTIFIER PARENOPEN params PARENCLOSE COLON type CURLYOPEN . body_of_function CURLYCLOSE

    $default  reduce using rule 18 (var_declaration)

    body_of_function  go to state 25
    var_declaration   go to state 26


state 25

   15 function: FUNCTION IDENTIFIER PARENOPEN params PARENCLOSE COLON type CURLYOPEN body_of_function . CURLYCLOSE

    CURLYCLOSE  shift, and go to state 27


state 26

   16 body_of_function: var_declaration . function_declaration statements ReturnStatement
   19 var_declaration: var_declaration . VAR IDENTIFIER moreparams COLON type SEMICOLON
   20                | var_declaration . VAR IDENTIFIER moreparams COLON INTARRAY SQUAREOPEN NUMBER SQUARECLOSE SEMICOLON

    VAR       shift, and go to state 28
    FUNCTION  shift, and go to state 4

    $default  reduce using rule 21 (function_declaration)

    function              go to state 29
    function_declaration  go to state 30


state 27

   15 function: FUNCTION IDENTIFIER PARENOPEN params PARENCLOSE COLON type CURLYOPEN body_of_function CURLYCLOSE .

    $default  reduce using rule 15 (function)


state 28

   19 var_declaration: var_declaration VAR . IDENTIFIER moreparams COLON type SEMICOLON
   20                | var_declaration VAR . IDENTIFIER moreparams COLON INTARRAY SQUAREOPEN NUMBER SQUARECLOSE SEMICOLON

    IDENTIFIER  shift, and go to state 31


state 29

   22 function_declaration: function . function_declaration

    FUNCTION  shift, and go to state 4

    $default  reduce using rule 21 (function_declaration)

    function              go to state 29
    function_declaration  go to state 32


state 30

   16 body_of_function: var_declaration function_declaration . statements ReturnStatement

    $default  reduce using rule 24 (statements)

    statements  go to state 33


state 31

   19 var_declaration: var_declaration VAR IDENTIFIER . moreparams COLON type SEMICOLON
   20                | var_declaration VAR IDENTIFIER . moreparams COLON INTARRAY SQUAREOPEN NUMBER SQUARECLOSE SEMICOLON

    $default  reduce using rule 14 (moreparams)

    moreparams  go to state 34


state 32

   22 function_declaration: function function_declaration .

    $default  reduce using rule 22 (function_declaration)


state 33

   16 body_of_function: var_declaration function_declaration statements . ReturnStatement
   23 statements: statements . statement

    IF          shift, and go to state 35
    WHILE       shift, and go to state 36
    RETURN      shift, and go to state 37
    IDENTIFIER  shift, and go to state 38

    ReturnStatement  go to state 39
    statement        go to state 40


state 34

   13 moreparams: moreparams . COMMA IDENTIFIER
   19 var_declaration: var_declaration VAR IDENTIFIER moreparams . COLON type SEMICOLON
   20                | var_declaration VAR IDENTIFIER moreparams . COLON INTARRAY SQUAREOPEN NUMBER SQUARECLOSE SEMICOLON

    COMMA  shift, and go to state 41
    COLON  shift, and go to state 42


state 35

   27 statement: IF . PARENOPEN expression PARENCLOSE CURLYOPEN statements CURLYCLOSE
   28          | IF . PARENOPEN expression PARENCLOSE CURLYOPEN statements CURLYCLOSE ELSE CURLYOPEN statements CURLYCLOSE

    PARENOPEN  shift, and go to state 43


state 36

   29 statement: WHILE . PARENOPEN expression PARENCLOSE CURLYOPEN statements CURLYCLOSE

    PARENOPEN  shift, and go to state 44


state 37

   17 ReturnStatement: RETURN . expression SEMICOLON

    MINUS       shift, and go to state 45
    NOT         shift, and go to state 46
    TRUE        shift, and go to state 47
    FALSE       shift, and go to state 48
    NUMBER      shift, and go to state 49
    ABS         shift, and go to state 50
    PARENOPEN   shift, and go to state 51
    IDENTIFIER  shift, and go to state 52

    expression  go to state 53
    or          go to state 54
    and         go to state 55
    comparator  go to state 56
    difference  go to state 57
    add         go to state 58
    times       go to state 59
    unary       go to state 60
    factor      go to state 61


state 38

   25 statement: IDENTIFIER . SET IDENTIFIER PARENOPEN exprlist PARENCLOSE SEMICOLON
   26          | IDENTIFIER . SQUAREOPEN expression SQUARECLOSE SET IDENTIFIER PARENOPEN exprlist PARENCLOSE SEMICOLON
   30          | IDENTIFIER . SET expression SEMICOLON
   31          | IDENTIFIER . SQUAREOPEN expression SQUARECLOSE SET expression SEMICOLON

    SET         shift, and go to state 62
    SQUAREOPEN  shift, and go to state 63


state 39

   16 body_of_function: var_declaration function_declaration statements ReturnStatement .

    $default  reduce using rule 16 (body_of_function)


state 40

   23 statements: statements statement .

    $default  reduce using rule 23 (statements)


state 41

   13 moreparams: moreparams COMMA . IDENTIFIER

    IDENTIFIER  shift, and go to state 64


state 42

   19 var_declaration: var_declaration VAR IDENTIFIER moreparams COLON . type SEMICOLON
   20                | var_declaration VAR IDENTIFIER moreparams COLON . INTARRAY SQUAREOPEN NUMBER SQUARECLOSE SEMICOLON

    BOOLEAN   shift, and go to state 20
    INTEGER   shift, and go to state 21
    INTARRAY  shift, and go to state 65

    type  go to state 66


state 43

   27 statement: IF PARENOPEN . expression PARENCLOSE CURLYOPEN statements CURLYCLOSE
   28          | IF PARENOPEN . expression PARENCLOSE CURLYOPEN statements CURLYCLOSE ELSE CURLYOPEN statements CURLYCLOSE

    MINUS       shift, and go to state 45
    NOT         shift, and go to state 46
    TRUE        shift, and go to state 47
    FALSE       shift, and go to state 48
    NUMBER      shift, and go to state 49
    ABS         shift, and go to state 50
    PARENOPEN   shift, and go to state 51
    IDENTIFIER  shift, and go to state 52

    expression  go to state 67
    or          go to state 54
    and         go to state 55
    comparator  go to state 56
    difference  go to state 57
    add         go to state 58
    times       go to state 59
    unary       go to state 60
    factor      go to state 61


state 44

   29 statement: WHILE PARENOPEN . expression PARENCLOSE CURLYOPEN statements CURLYCLOSE

    MINUS       shift, and go to state 45
    NOT         shift, and go to state 46
    TRUE        shift, and go to state 47
    FALSE       shift, and go to state 48
    NUMBER      shift, and go to state 49
    ABS         shift, and go to state 50
    PARENOPEN   shift, and go to state 51
    IDENTIFIER  shift, and go to state 52

    expression  go to state 68
    or          go to state 54
    and         go to state 55
    comparator  go to state 56
    difference  go to state 57
    add         go to state 58
    times       go to state 59
    unary       go to state 60
    factor      go to state 61


state 45

   53 unary: MINUS . unary

    MINUS       shift, and go to state 45
    NOT         shift, and go to state 46
    TRUE        shift, and go to state 47
    FALSE       shift, and go to state 48
    NUMBER      shift, and go to state 49
    ABS         shift, and go to state 50
    PARENOPEN   shift, and go to state 51
    IDENTIFIER  shift, and go to state 52

    unary   go to state 69
    factor  go to state 61


state 46

   52 unary: NOT . unary

    MINUS       shift, and go to state 45
    NOT         shift, and go to state 46
    TRUE        shift, and go to state 47
    FALSE       shift, and go to state 48
    NUMBER      shift, and go to state 49
    ABS         shift, and go to state 50
    PARENOPEN   shift, and go to state 51
    IDENTIFIER  shift, and go to state 52

    unary   go to state 70
    factor  go to state 61


state 47

   55 factor: TRUE .

    $default  reduce using rule 55 (factor)


state 48

   56 factor: FALSE .

    $default  reduce using rule 56 (factor)


state 49

   54 factor: NUMBER .

    $default  reduce using rule 54 (factor)


state 50

   59 factor: ABS . expression ABS

    MINUS       shift, and go to state 45
    NOT         shift, and go to state 46
    TRUE        shift, and go to state 47
    FALSE       shift, and go to state 48
    NUMBER      shift, and go to state 49
    ABS         shift, and go to state 50
    PARENOPEN   shift, and go to state 51
    IDENTIFIER  shift, and go to state 52

    expression  go to state 71
    or          go to state 54
    and         go to state 55
    comparator  go to state 56
    difference  go to state 57
    add         go to state 58
    times       go to state 59
    unary       go to state 60
    factor      go to state 61


state 51

   58 factor: PARENOPEN . expression PARENCLOSE

    MINUS       shift, and go to state 45
    NOT         shift, and go to state 46
    TRUE        shift, and go to state 47
    FALSE       shift, and go to state 48
    NUMBER      shift, and go to state 49
    ABS         shift, and go to state 50
    PARENOPEN   shift, and go to state 51
    IDENTIFIER  shift, and go to state 52

    expression  go to state 72
    or          go to state 54
    and         go to state 55
    comparator  go to state 56
    difference  go to state 57
    add         go to state 58
    times       go to state 59
    unary       go to state 60
    factor      go to state 61


state 52

   57 factor: IDENTIFIER .
   60       | IDENTIFIER . SQUAREOPEN expression SQUARECLOSE

    SQUAREOPEN  shift, and go to state 73

    $default  reduce using rule 57 (factor)


state 53

   17 ReturnStatement: RETURN expression . SEMICOLON
   33 expression: expression . OR or

    OR         shift, and go to state 74
    SEMICOLON  shift, and go to state 75


state 54

   32 expression: or .
   35 or: or . AND and

    AND  shift, and go to state 76

    $default  reduce using rule 32 (expression)


state 55

   34 or: and .
   37 and: and . EQUAL comparator
   38    | and . NOTEQUAL comparator

    EQUAL     shift, and go to state 77
    NOTEQUAL  shift, and go to state 78

    $default  reduce using rule 34 (or)


state 56

   36 and: comparator .
   40 comparator: comparator . LT difference
   41           | comparator . LTE difference
   42           | comparator . GT difference
   43           | comparator . GTE difference

    GTE  shift, and go to state 79
    GT   shift, and go to state 80
    LTE  shift, and go to state 81
    LT   shift, and go to state 82

    $default  reduce using rule 36 (and)


state 57

   39 comparator: difference .
   45 difference: difference . PLUS add
   46           | difference . MINUS add

    MINUS  shift, and go to state 83
    PLUS   shift, and go to state 84

    $default  reduce using rule 39 (comparator)


state 58

   44 difference: add .
   48 add: add . DIVIDE times
   49    | add . TIMES times

    DIVIDE  shift, and go to state 85
    TIMES   shift, and go to state 86

    $default  reduce using rule 44 (difference)


state 59

   47 add: times .

    $default  reduce using rule 47 (add)


state 60

   50 times: unary .

    $default  reduce using rule 50 (times)


state 61

   51 unary: factor .

    $default  reduce using rule 51 (unary)


state 62

   25 statement: IDENTIFIER SET . IDENTIFIER PARENOPEN exprlist PARENCLOSE SEMICOLON
   30          | IDENTIFIER SET . expression SEMICOLON

    MINUS       shift, and go to state 45
    NOT         shift, and go to state 46
    TRUE        shift, and go to state 47
    FALSE       shift, and go to state 48
    NUMBER      shift, and go to state 49
    ABS         shift, and go to state 50
    PARENOPEN   shift, and go to state 51
    IDENTIFIER  shift, and go to state 87

    expression  go to state 88
    or          go to state 54
    and         go to state 55
    comparator  go to state 56
    difference  go to state 57
    add         go to state 58
    times       go to state 59
    unary       go to state 60
    factor      go to state 61


state 63

   26 statement: IDENTIFIER SQUAREOPEN . expression SQUARECLOSE SET IDENTIFIER PARENOPEN exprlist PARENCLOSE SEMICOLON
   31          | IDENTIFIER SQUAREOPEN . expression SQUARECLOSE SET expression SEMICOLON

    MINUS       shift, and go to state 45
    NOT         shift, and go to state 46
    TRUE        shift, and go to state 47
    FALSE       shift, and go to state 48
    NUMBER      shift, and go to state 49
    ABS         shift, and go to state 50
    PARENOPEN   shift, and go to state 51
    IDENTIFIER  shift, and go to state 52

    expression  go to state 89
    or          go to state 54
    and         go to state 55
    comparator  go to state 56
    difference  go to state 57
    add         go to state 58
    times       go to state 59
    unary       go to state 60
    factor      go to state 61


state 64

   13 moreparams: moreparams COMMA IDENTIFIER .

    $default  reduce using rule 13 (moreparams)


state 65

   20 var_declaration: var_declaration VAR IDENTIFIER moreparams COLON INTARRAY . SQUAREOPEN NUMBER SQUARECLOSE SEMICOLON

    SQUAREOPEN  shift, and go to state 90


state 66

   19 var_declaration: var_declaration VAR IDENTIFIER moreparams COLON type . SEMICOLON

    SEMICOLON  shift, and go to state 91


state 67

   27 statement: IF PARENOPEN expression . PARENCLOSE CURLYOPEN statements CURLYCLOSE
   28          | IF PARENOPEN expression . PARENCLOSE CURLYOPEN statements CURLYCLOSE ELSE CURLYOPEN statements CURLYCLOSE
   33 expression: expression . OR or

    OR          shift, and go to state 74
    PARENCLOSE  shift, and go to state 92


state 68

   29 statement: WHILE PARENOPEN expression . PARENCLOSE CURLYOPEN statements CURLYCLOSE
   33 expression: expression . OR or

    OR          shift, and go to state 74
    PARENCLOSE  shift, and go to state 93


state 69

   53 unary: MINUS unary .

    $default  reduce using rule 53 (unary)


state 70

   52 unary: NOT unary .

    $default  reduce using rule 52 (unary)


state 71

   33 expression: expression . OR or
   59 factor: ABS expression . ABS

    OR   shift, and go to state 74
    ABS  shift, and go to state 94


state 72

   33 expression: expression . OR or
   58 factor: PARENOPEN expression . PARENCLOSE

    OR          shift, and go to state 74
    PARENCLOSE  shift, and go to state 95


state 73

   60 factor: IDENTIFIER SQUAREOPEN . expression SQUARECLOSE
